tree-sitter-bynk/grammar.js
    source_file: ($) =>
      choice(
        repeat1(
          choice(
            $.commons_decl,
            $.context_decl,
            $.adapter_decl,
            $.integration_decl,
            $.test_decl,
          ),
        ),
        repeat1($._item_fragment),
        $._expr_fragment,
      ),

    _item_fragment: ($) =>
      choice($._context_body_item, $.handler, $.store_field, $.key_decl),

    // The body of a fragment block: statements then an optional tail value,
    // mirroring `block` so multi-statement and bare-expression snippets parse.
    // Spelled as a non-empty choice so the rule never matches the empty input.
    _expr_fragment: ($) =>
      choice(
        seq(repeat1($._statement), optional(field("tail", $._expression))),
        field("tail", $._expression),
      ),

    context_decl: ($) =>
      seq(
        "context",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._context_body_item), "}"),
          repeat($._context_body_item),
        ),
      ),

    // v0.17: an adapter — the host boundary (capability contract + binding).
    // Brace or fragment form, like commons/context.
    qualified_name: ($) => sep1($.identifier, "."),

    _context_body_item: ($) =>
      choice(
        $.uses_decl,
        $.consumes_decl,
        $.exports_decl,
        $.type_decl,
        $.fn_decl,
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
        $.actor_decl,
      ),

    // v0.17: adapter items — a binding clause, capabilities, boundary types,
    // inline pure helpers and `uses`, external providers, and `exports`.
    // v0.18 adds `consumes` (adapter-to-adapter capability dependencies).
    // Permissive (service/agent parse here too); the LSP reports the semantic
    // placement error.
    type_decl: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        "=",
        field("body", $._type_body),
      ),

    _type_body: ($) =>
      choice(
        $.opaque_type,
        $.refined_type,
        $.record_type,
        $.sum_type,
        $.enum_type,
      ),

    record_type: ($) =>
      seq(
        "{",
        optional(sep1($.record_field, ",")),
        optional(","),
        "}",
      ),

    record_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
        optional(seq("where", field("refinement", $.refinement))),
        // v0.11: an optional initial-value expression. Meaningful on agent
        // `store` fields; the checker restricts where it applies.
        optional(seq("=", field("init", $._expression))),
      ),

    base_type: () => choice("Int", "String", "Bool", "Float", "Duration", "Instant"),

    _type_ref: ($) =>
      choice(
        $.function_type_ref,
        $._base_type,
        $.unit_type,
        $.validation_error_type,
        $.generic_type_ref,
        $.identifier,
      ),

    // v0.20a: a function type — `A -> B`, `(A, B) -> C`, `() -> B`,
    // right-associative (prec.right). A parenthesised parameter list is only
    // a function type when followed by `->`; bare `()` stays the unit type.
    unit_type: () => seq("(", ")"),
    generic_type_ref: ($) =>
      seq(
        field(
          "name",
          choice(
            alias("Result", $.builtin_type),
            alias("Option", $.builtin_type),
            alias("Effect", $.builtin_type),
            // v0.9: HTTP result type.
            alias("HttpResult", $.builtin_type),
            // v0.20b: the built-in collection types.
            alias("List", $.builtin_type),
            alias("Map", $.builtin_type),
            // v0.100/v0.92/v0.102: stream, lazy storage query, held connection.
            alias("Stream", $.builtin_type),
            alias("Query", $.builtin_type),
            alias("Connection", $.builtin_type),
          ),
        ),
        "[",
        sep1(field("arg", $._type_ref), ","),
        "]",
      ),

    // -- Function declarations --

    fn_decl: ($) =>
      seq(
        "fn",
        field("name", choice($.method_name, $.identifier)),
        // v0.20a: optional `[A, B]` type parameters (functions only).
        optional(seq("[", sep1(field("type_param", $.identifier), ","), "]")),
        "(",
        optional($._params),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),
    _params: ($) =>
      seq(
        choice($.self_param, $.param),
        repeat(seq(",", $.param)),
        optional(","),
      ),
    param: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
      ),

    // -- v0.5: capabilities, providers, services, agents --

    capability_decl: ($) =>
      seq(
        "capability",
        field("name", $.identifier),
        "{",
        repeat($.capability_op),
        "}",
      ),
    capability_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
      ),

    provider_decl: ($) =>
      seq(
        "provides",
        field("capability", $.identifier),
        "=",
        field("provider", $.identifier),
        // v0.12: a provider may depend on other capabilities.
        optional(field("given", $.given_clause)),
        // v0.17: a bodiless provider is *external* — supplied by an adapter's
        // binding. The absence of the brace block (not an empty one) is the
        // signal; the LSP reports placement errors (body in an adapter, or
        // bodiless outside one).
        optional(seq("{", repeat($.provider_op), "}")),
      ),
    provider_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),

    service_decl: ($) =>
      seq(
        "service",
        field("name", $.identifier),
        optional(field("protocol", $.service_protocol)),
        "{",
        repeat($.handler),
        "}",
      ),
    // v0.44: `from <protocol>` on the service header.
    // v0.103: `from WebSocket(in: I, out: O)` binds the inbound/outbound frame
    // types. `WebSocket`, `in`, and `out` are contextual (resolved by `word`).
    service_protocol: ($) =>
      seq(
        "from",
        choice(
          "http",
          "cron",
          seq("queue", "(", field("name", $.string_literal), ")"),
          seq(
            "WebSocket",
            "(",
            "in",
            ":",
            field("in_frame", $._type_ref),
            ",",
            "out",
            ":",
            field("out_frame", $._type_ref),
            optional(","),
            ")",
          ),
        ),
      ),

    agent_decl: ($) =>
      seq(
        "agent",
        field("name", $.identifier),
        "{",
        field("key", $.key_decl),
        // v0.81 (storage track): the agent's `store` fields (ADR 0108).
        repeat($.store_field),
        repeat($.invariant_decl),
        repeat($.handler),
        "}",
      ),
    // v0.80: an agent invariant — `invariant <name>: <predicate>`. Sits between
    // the store fields and the handlers.
    invariant_decl: ($) =>
      seq(
        "invariant",
        field("name", $.identifier),
        ":",
        field("predicate", $._expression),
      ),
    key_decl: ($) =>
      seq("key", field("name", $.identifier), ":", field("type", $._type_ref)),
    // v0.81 (storage track): `store <name>: <Kind>[…] [= init]`. `store` is a
    // contextual keyword (also a valid identifier — e.g. a `cache.store`
    // context); the `word` directive resolves it by context.
    store_field: ($) =>
      seq(
        "store",
        field("name", $.identifier),
        ":",
        field("kind", $.store_kind),
        repeat(field("annotation", $.store_annotation)),
        optional(seq("=", field("init", $._expression))),
      ),
    store_kind: ($) =>
      seq(
        field("head", $.identifier),
        optional(seq("[", sep1($._type_ref, ","), "]")),
      ),

    // v0.85 (storage track; ADR 0111): `@<name>(<args>)` field annotations.
    // `@` appears only here; the name is an ordinary identifier (the checker
    // matches the closed registry). An argument is an optional `label:` then a
    // value expression — `by: orderId`, `5.minutes`.
    handler: ($) =>
      choice(
        $.call_handler,
        $.http_handler,
        $.cron_handler,
        $.queue_handler,
        // v0.103/v0.106: WebSocket lifecycle handlers. `on message` reuses the
        // queue-handler shape (the protocol on the service header disambiguates).
        $.ws_open_handler,
        $.ws_close_handler,
      ),
    call_handler: ($) =>
      seq(
        "on",
        "call",
        optional(field("method", $.identifier)),
        optional(field("by", $.by_clause)),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    // v0.44: `on GET("/path") (params) -> …` — the method-builder collapses
    // verb+route into one config expression in the handler-config slot.
    http_handler: ($) =>
      seq(
        "on",
        field("method", $.http_method),
        "(",
        field("path", $.string_literal),
        ")",
        optional(field("by", $.by_clause)),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    http_method: () => choice("GET", "POST", "PUT", "PATCH", "DELETE"),
    // v0.44: `on schedule("<expr>") (at: Int?) -> Effect[Result[(), E]] { … }`.
    cron_handler: ($) =>
      seq(
        "on",
        "schedule",
        "(",
        field("schedule", $.string_literal),
        ")",
        optional(field("by", $.by_clause)),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    // v0.44: `on message(m: T) -> Effect[QueueResult] { … }`. The queue binding
    // lives on the service header (`from queue("name")`).
    given_clause: ($) =>
      // v0.15: a capability may be a bare local name or a dotted cross-context
      // reference (`B.Cap` / `platform.time.Clock`).
      seq("given", sep1(field("capability", $.qualified_name), ",")),

    // v0.45: an actor declaration — a boundary contract. Normal form
    // `actor Name { auth = Scheme (, identity = Type)? }`; the reserved
    // refinement form `actor Admin = Base where <predicate>` is parsed (and
    // rejected by the checker in Foundations).
    block: ($) =>
      seq("{", repeat($._statement), optional(field("tail", $._expression)), "}"),

    // `assert` is an expression (v0.9.1) but also appears in statement
    // position within a test body (an expression-statement of type `()`).
    _statement: ($) =>
      choice(
        $.let_stmt,
        $.effect_let_stmt,
        $.effect_send_stmt,
        $.assign_stmt,
        prec(1, $.assert_expr),
      ),

    let_stmt: ($) =>
      seq(
        "let",
        field("name", $._binding_name),
        optional(seq(":", field("type", $._type_ref))),
        "=",
        field("value", $._expression),
      ),
    assign_stmt: ($) =>
      seq(field("target", $.identifier), ":=", field("value", $._expression)),

    // A let/effect-let may bind the discard name `_`.
    _binding_name: ($) => choice($.identifier, alias("_", $.wildcard)),

    // -- Expressions --

    _expression: ($) =>
      choice(
        $.if_expr,
        $.match_expr,
        $.is_expr,
        $.assert_expr,
        $.binary_expr,
        $.unary_expr,
        $._primary,
      ),

    // v0.9.1: `assert` is an expression of type `()`.
    match_expr: ($) =>
      seq(
        "match",
        field("disc", $._expression),
        "{",
        repeat($.match_arm),
        "}",
      ),
    // Arms are newline-separated; a trailing comma is permitted but not
    // required.
    match_arm: ($) =>
      prec.right(
        seq(
          field("pattern", $._pattern),
          "=>",
          // `_expression` already includes `block` via `_primary`, so a
          // `{ … }` arm body is covered without a separate alternative.
          field("body", $._expression),
          optional(","),
        ),
      ),

    _pattern: ($) => choice($.wildcard_pattern, $.variant_pattern),
    variant_pattern: ($) =>
      prec.right(
        seq(
          optional(seq(field("type", $.identifier), ".")),
          field("variant", $.identifier),
          optional(
            seq(
              "(",
              optional(sep1($._pattern_binding, ",")),
              optional(","),
              ")",
            ),
          ),
        ),
      ),
    _pattern_binding: ($) =>
      choice(
        $.named_binding,
        $.positional_binding,
      ),
    positional_binding: ($) => choice($.identifier, "_"),

    binary_expr: ($) =>
      choice(
        // v0.80: `P implies Q` — right-associative, lowest precedence.
        prec.right(PREC.implies, seq($._expression, "implies", $._expression)),
        prec.left(PREC.or, seq($._expression, "||", $._expression)),
        prec.left(PREC.and, seq($._expression, "&&", $._expression)),
        prec.left(PREC.cmp, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(
          PREC.rel,
          seq($._expression, choice("<", "<=", ">", ">="), $._expression),
        ),
        prec.left(PREC.add, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.mul, seq($._expression, choice("*", "/"), $._expression)),
      ),

    _primary: ($) =>
      choice(
        $.lambda_expr,
        $.paren_expr,
        $.method_call,
        $.field_access,
        $.call,
        $.record_construction,
        $.record_spread,
        $.question_expr,
        $.ok_expr,
        $.err_expr,
        $.some_expr,
        $.none_expr,
        $.effect_pure_expr,
        $.mock_expr,
        $.list_literal,
        $.block,
        $.number_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        $.unit_literal,
        $.self_expr,
        $.identifier,
      ),

    // v0.20a: a lambda — `(params) => expr | block`. Conflicts with
    // paren_expr/unit_literal until the `=>` disambiguates (GLR conflict
    // declared below).
    method_call: ($) =>
      prec.left(
        PREC.postfix + 1,
        seq(
          field("receiver", $._primary),
          ".",
          field("method", $.identifier),
          // v0.22b: optional explicit type arguments on a qualified static —
          // `Json.decode[T](…)` (same-line rule as `call` type application).
          optional(seq("[", sep1(field("type_arg", $._type_ref), ","), "]")),
          "(",
          optional(sep1(field("arg", $._expression), ",")),
          optional(","),
          ")",
        ),
      ),

    ok_expr: ($) => seq("Ok", "(", $._expression, ")"),
    identifier: () => /[A-Za-z][A-Za-z0-9_]*/,

    // Constant-style names (capitalised idents used as variant names).
    // Tree-sitter cannot enforce capitalisation at the lex level without
    // overshadowing `identifier`; we use a regex.
    number_literal: () => /[0-9]+/,
    // v0.21: a float literal — fraction with a digit on both sides of the
    // `.`, an exponent, or both. Longest-match keeps `1.toFloat()` lexing
    // as a method call on an integer literal.
