tree-sitter-bynk/test/corpus/v0.5.txt
==========================
capability declaration
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param
          name: (identifier)
          type: (base_type))
        return_type: (unit_type)))))

==========================
provider declaration
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}

	provides Logger = ConsoleLogger {
		fn log(message: String) -> () { () }
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param
          name: (identifier)
          type: (base_type))
        return_type: (unit_type)))
    (provider_decl
      capability: (identifier)
      provider: (identifier)
      (provider_op
        name: (identifier)
        (param
          name: (identifier)
          type: (base_type))
        return_type: (unit_type)
        body: (block
          tail: (unit_literal))))))

==========================
service handler with given
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}

	service Billing {
		on call ping() -> Effect[Bool] given Logger {
			Effect.pure(true)
		}
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param
          name: (identifier)
          type: (base_type))
        return_type: (unit_type)))
    (service_decl
      name: (identifier)
      (handler
        (call_handler
          method: (identifier)
          return_type: (generic_type_ref
            name: (builtin_type)
            arg: (base_type))
          given: (given_clause
            capability: (qualified_name
              (identifier)))
          body: (block
            tail: (effect_pure_expr
              (boolean_literal))))))))

==========================
agent with store and assign
==========================

context shop {
	agent Cart {
		key id: Int

		store items: Cell[Int]

		on call addItem(qty: Int) -> Effect[()] {
			let cur = items
			items := cur + qty
			Effect.pure(())
		}
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier))
    (agent_decl
      name: (identifier)
      key: (key_decl
        name: (identifier)
        type: (base_type))
      (store_field
        name: (identifier)
        kind: (store_kind
          head: (identifier)
          (base_type)))
      (handler
        (call_handler
          method: (identifier)
          (param
            name: (identifier)
            type: (base_type))
          return_type: (generic_type_ref
            name: (builtin_type)
            arg: (unit_type))
          body: (block
            (let_stmt
              name: (identifier)
              value: (identifier))
            (assign_stmt
              target: (identifier)
              value: (binary_expr
                (identifier)
                (identifier)))
            tail: (effect_pure_expr
              (unit_literal))))))))
