tree-sitter-bynk/test/corpus/v0.80.txt
==========================
agent with invariant and implies
==========================

context shop {
	agent Order {
		key id: Int

		store paid: Cell[Bool]

		invariant paid_implies_ok:
			paid implies paid

		on call pay() -> Effect[()] {
			paid := true
			Effect.pure(())
		}
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name
      (identifier))
    (agent_decl
      name: (identifier)
      key: (key_decl
        name: (identifier)
        type: (base_type))
      (store_field
        name: (identifier)
        kind: (store_kind
          head: (identifier)
          (base_type)))
      (invariant_decl
        name: (identifier)
        predicate: (binary_expr
          (identifier)
          (identifier)))
      (handler
        (call_handler
          method: (identifier)
          return_type: (generic_type_ref
            name: (builtin_type)
            arg: (unit_type))
          body: (block
            (assign_stmt
              target: (identifier)
              value: (boolean_literal))
            tail: (effect_pure_expr
              (unit_literal))))))))
